[tool.poetry]
name = "app"
version = "0.0.0"
description = "FDA 2 application"
authors = []
classifiers = [
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.8"
coverage = "4.5.2"
torch = "^1.10.1"
torchvision = "^0.11.2"
torchaudio = "^0.10.1"
ftfy = "^6.0.3"
regex = "^2022.1.18"
tqdm = "^4.62.3"
omegaconf = "^2.1.1"
pytorch-lightning = "^1.5.9"
kornia = "^0.6.2"
imageio = "^2.14.1"
imageio-ffmpeg = "^0.4.5"
einops = "^0.4.0"
torch-optimizer = "^0.3.0"
ipython = "^8.0.1"
taming-transformers = "^0.0.1"
clip = {git = "https://github.com/openai/CLIP.git", rev = "main"}
Pillow = "^9.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# pyproject.toml
[tool.pytest.ini_options]
addopts = "--verbose --junit-xml=report.xml --cov --cov-report=xml:coverage.xml"
